<resources>
    <string name="app_name">FargmentKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_category">to category</string>
    <string name="category_lifestyle">Category Lifestyle</string>
    <string name="description">Description</string>
    <string name="to_profile">To profile</string>
    <string name="show_dialog">Show dialog</string>
    <string name="sir_alex_ferguson">Sir Alex Ferguson</string>
    <string name="jose_mourinho">Jose Mourinho</string>
    <string name="louis_van_gaal">Louis Van Gaal</string>
    <string name="david_moyes">David Moyes</string>
    <string name="close">Close</string>
    <string name="choose">Choose</string>
    <string name="this_profile">This Profile</string>
</resources>